--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <div id="pdf-content-wrapper"> <!-- Added wrapper -->
   <header>
-    <!-- Banner image is set via CSS background -->
+    <!-- Banner image is set via CSS backgroundss-->
   </header>
 
   <div class="ribbon">
