made two separate input fields both for group name and group number

--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
   </div>
 
   <div class="container">
-    <section class="card">
-      <div class="grid grid-two-col compact-section">
-      <label for="groupName">GROUP NAME:</label>
-        <input type="text" id="groupName" name="groupName" class="pdf-plain-text" value="#12871SE - AD Medic Tours" />
-
+ 
+      <section class="card">
+        <div class="grid grid-two-col compact-section">
+          <label for="groupNumber">GROUP NUMBER:</label>
+          <input type="text" id="groupNumber" name="groupNumber" class="pdf-plain-text" value="#12871SE" />
+          
+          <label for="groupName">GROUP NAME:</label>
+          <input type="text" id="groupName" name="groupName" class="pdf-plain-text" value="AD Medic Tours" />
       <label for="destination">DESTINATION:</label>
         <input type="text" id="destination" name="destination" class="pdf-plain-text destination-autocomplete" value="Gothenburg, Sweden" />
 
