--- a/index.html
+++ b/index.html
@@ -1976,7 +1976,7 @@
         }
 
         #pdf-content-wrapper {
-          width: 210mm;  /* A4 width */
+          width: 210mm;  /* A4 widths */
           margin: 0 auto;
         }
 
